eerste versie ocr toegevoegd

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,6 +14,10 @@
 		<description>Loads the ScoringSingleton on server start</description>
 		<listener-class>nl.cubix.scrabble.solver.scoring.ScoringListener</listener-class>
 	</listener>
+	<listener>
+		<description>Loads the OcrTRainingListener on server start</description>
+		<listener-class>nl.cubix.scrabble.boardimporter.ocrtraining.OcrTrainingListener</listener-class>
+	</listener>
 <!--
 	<listener>
 		<description>Loads the DictionarySingleton on server start</description>
