--- a/trunk/WebContent/WEB-INF/web.xml
+++ b/trunk/WebContent/WEB-INF/web.xml
@@ -36,4 +36,25 @@
 		<url-pattern>/solve</url-pattern>
 	</servlet-mapping>
 	
+	<!-- ********* -->
+	<!--  FILTERS  -->
+	<!-- ********* -->
+	
+
+	<!-- This filter makes sure all http traffic is forced to UTF-8 -->
+	<filter>
+		<filter-name>CharsetFilter</filter-name>
+		<filter-class>nl.cubix.scrabble.filter.CharsetFilter</filter-class>
+		<init-param>
+			<param-name>requestEncoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>CharsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+  
+	
 </web-app>
